hero bug fixing, dissable parallax on mobile

--- a/src/styles/4_regions/_global-header.scss
+++ b/src/styles/4_regions/_global-header.scss
@@ -14,6 +14,12 @@
     width: 100%;
   }
 
+  height: $header-height-mobile;
+
+  @include desktopHeader() {
+    height: auto;
+  }
+
   .headroom {
     background-color: $black;
     transition: background-color .15s ease-in;
